--- a/ToroChallenge.Application/ToroChallenge.Application.csproj
+++ b/ToroChallenge.Application/ToroChallenge.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ToroChallenge.Domain\ToroChallenge.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
