--- a/ToroChallenge.Application/ToroChallenge.Application.csproj
+++ b/ToroChallenge.Application/ToroChallenge.Application.csproj
@@ -12,4 +12,16 @@
     <ProjectReference Include="..\ToroChallenge.Domain\ToroChallenge.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ApplicationServices\" />
+    <Folder Include="AutoMapper\" />
+    <Folder Include="DTOs\Responses\" />
+    <Folder Include="DTOs\Requests\" />
+    <Folder Include="Interfaces\ApplicationServices\" />
+    <Folder Include="Interfaces\Services\" />
+    <Folder Include="Interfaces\Repositories\" />
+    <Folder Include="Services\" />
+    <Folder Include="Utils\Exceptions\" />
+  </ItemGroup>
+
 </Project>
