--- a/ToroChallenge.Application/ToroChallenge.Application.csproj
+++ b/ToroChallenge.Application/ToroChallenge.Application.csproj
@@ -5,23 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ToroChallenge.Domain\ToroChallenge.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ApplicationServices\" />
-    <Folder Include="AutoMapper\" />
-    <Folder Include="DTOs\Responses\" />
-    <Folder Include="DTOs\Requests\" />
-    <Folder Include="Interfaces\ApplicationServices\" />
-    <Folder Include="Interfaces\Services\" />
-    <Folder Include="Interfaces\Repositories\" />
-    <Folder Include="Services\" />
-    <Folder Include="Utils\Exceptions\" />
   </ItemGroup>
 
 </Project>
