--- a/ToroChallenge.Api/appsettings.Development.json
+++ b/ToroChallenge.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.0.114,1433;Database=investimentos;UID=sa;PWD=Pwdsafe@123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
